serialization Api / affichage dans vuejs

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,7 @@
     <div class="main-container">
         <div class="row">
             <div class="container bg-dark text-center text-white">
-                <h3>Symfony 5 Application Frame</h3>
+                <h3>Application Frame</h3>
             </div>
         </div>
         <div class="row">
