--- a/templates/navbars/navbar.html.twig
+++ b/templates/navbars/navbar.html.twig
@@ -2,23 +2,25 @@
 {%- block body_navbar -%}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{{path('home')}}">Navbar</a>
+            <a class="navbar-brand" href="{{path('home')}}">RootHome</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{path('app_login')}}">Login</a>
+                        <a class="nav-link active" aria-current="page" href="{{path('admin')}}">EasyAdmin</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{path('admin')}}">Admin</a>
+                        <a class="nav-link active" aria-current="page" href="{{path('apiplatform')}}">ApiPlatform</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">RootAdmin</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                <div class="d-flex">
+                        <a class="nav-link active text-black" aria-current="page" href="{{path('app_login')}}">Login</a>
+                </div>
             </div>
         </div>
     </nav>
