--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,12 +3,13 @@
 {% block body %}
     <div class="main-container">
         <div class="row">
-            <div class="container bg-dark text-center text-white">
-                <h3>Application Frame</h3>
+            <div class="container text-center text-white">
+                <h3>Back-end Application Frame</h3>
             </div>
         </div>
         <div class="row">
-            <div class="container bg-info text-center p-5">
+            <div class="container front-app text-center text-white">
+                <h4>Front-end Application View</h4>
                 <div id="app"></div>
             </div>
         </div>
