--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
+    <link rel="icon" type="image/x-icon" href="{{ asset('/images/favicon.ico') }}"/>
     {% block stylesheets %}
         {{ encore_entry_link_tags('style') }}
     {% endblock %}
