--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,13 +3,13 @@
 {% block body %}
     <div class="main-container">
         <div class="row">
-            <div class="container text-center text-white">
-                <h3>Back-end Application Frame</h3>
+            <div class="container text-center text--secondary text--lighten-5 mt-4 mb-4">
+                <h5><></h5>
             </div>
         </div>
         <div class="row">
             <div class="container front-app text-center text-white">
-                <h4>Front-end Application View</h4>
+                <h4>Front-end App</h4>
                 <div id="app"></div>
             </div>
         </div>
