--- a/templates/navbars/navbar.html.twig
+++ b/templates/navbars/navbar.html.twig
@@ -15,7 +15,7 @@
                         <a class="nav-link active" aria-current="page" href="{{path('apiplatform')}}">ApiPlatform</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{path('root_admin')}}">RootAdmin</a>
+                        <a class="nav-link active" aria-current="page" href="{{path('root_admin_home')}}">RootAdmin</a>
                     </li>
                 </ul>
                 <div class="d-flex">
