--- a/templates/navbars/navbar2.html.twig
+++ b/templates/navbars/navbar2.html.twig
@@ -6,6 +6,16 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{path('root_admin_model_add')}}">Add Model</a>
+                    </li>
+                </ul>
+                <div class="d-flex">
+                    <a class="nav-link active text-black" aria-current="page" href="{{path('app_login')}}">Login</a>
+                </div>
+            </div>
         </div>
     </nav>
 {%- endblock -%}
