--- a/templates/root-admin/model_add.html.twig
+++ b/templates/root-admin/model_add.html.twig
@@ -8,6 +8,7 @@
                 <div class="row">
                     <div class="col-md-12 offset-md-5 mb-5 mt-0">
                         <h4 class="text-white">Add new model</h4>
+                        <small class="text-white">Use JQuery Select2.js for multiple select fields</small>
                     </div>
                 </div>
                 <table id="new-model" class="table-expend table-sm">
@@ -47,5 +48,6 @@
             </div>
         </div>
     </div>
+    {{ form_end(form) }}
 {% endblock %}
 
