--- a/templates/root-admin/development/development_edit.html.twig
+++ b/templates/root-admin/development/development_edit.html.twig
@@ -1,4 +1,4 @@
-{%- set navbar = '/navbars/navbar2.html.twig' -%}
+{%- set navbar = '/navbars/admin_navbar.html.twig' -%}
 {% extends navbar %}
 {% block body %}
     {{ form_start(form) }}
@@ -7,8 +7,8 @@
             <div class="container form-model mb-2">
                 <div class="row">
                     <div class="col-md-12 offset-md-5 mb-5 mt-0">
-                        <h4 class="text-white">Add new Development documentation</h4>
-                        <small class="text-white"></small>
+                        <h4 class="text-white">Edit new Development documentation</h4>
+                        <small class="text-white">Use Tom-select with Symfony (No JQuery)</small>
                     </div>
                 </div>
                 <table id="new-model" class="table-expend table-sm">
@@ -17,10 +17,10 @@
                         <td>{{- form_widget(form.title) -}}</td>
                         <td class="text-white">{{- form_label(form.file) -}}</td>
                         <td>{{- form_widget(form.file,{ 'attr': {'class': 'form-control'}}) -}}</td>
-                        <td class="text-white">{{- form_label(form.section) -}}</td>
-                        <td>{{- form_widget(form.section) -}}</td>
                     </tr>
                     <tr>
+                        <td class="text-white">{{- form_label(form.section) -}}</td>
+                        <td>{{- form_widget(form.section) -}}</td>
                         <td class="text-white">{{- form_label(form.content) -}}</td>
                         <td>{{- form_widget(form.content) -}}</td>
                         <td class="text-white">{{- form_label(form.slug) -}}</td>
