--- a/templates/root-admin/development/development_list.html.twig
+++ b/templates/root-admin/development/development_list.html.twig
@@ -1,4 +1,4 @@
-{%- set navbar = '/navbars/navbar2.html.twig' -%}
+{%- set navbar = '/navbars/admin_navbar.html.twig' -%}
 {% extends navbar %}
 {% block body %}
 
