--- a/templates/navbars/admin_navbar.html.twig
+++ b/templates/navbars/admin_navbar.html.twig
@@ -9,6 +9,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{path('root_admin_model_list')}}">Models</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{{path('root_admin_model_add')}}">Add Model</a>
                     </li>
                     <li class="nav-item">
