--- a/templates/navbars/admin_navbar.html.twig
+++ b/templates/navbars/admin_navbar.html.twig
@@ -15,6 +15,9 @@
                         <a class="nav-link active" aria-current="page" href="{{path('root_admin_model_add')}}">Add Model</a>
                     </li>
                     <li class="nav-item">
+                        <span class="nav-link active" aria-current="page" href="#"> | </span>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{{path('root_admin_dev_list')}}">Developments</a>
                     </li>
                     <li class="nav-item">
