--- a/templates/root-admin/development/development_edit.html.twig
+++ b/templates/root-admin/development/development_edit.html.twig
@@ -31,7 +31,7 @@
                         <td>{{- form_widget(form.file,{ 'attr': {'class': 'form-control'}}) -}}</td>
                     </tr>
                     <tr>
-                        <td>{{- form_widget(form.submit, {'attr':{'class':'btn btn-success w-100'}}) -}}</td>
+                        <td>{{- form_widget(form.submit, {'attr':{'class':'btn btn-warning w-100'}}) -}}</td>
                     </tr>
                 </table>
             </div>
