Refactoring + styling admin part

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -22,7 +22,7 @@ html{
     margin-left: 20px;
 }
 .main-container{
-    background: #1ea471;
+    background: whitesmoke;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
