--- a/templates/root-admin/development/development_edit.html.twig
+++ b/templates/root-admin/development/development_edit.html.twig
@@ -2,42 +2,26 @@
 {% extends navbar %}
 {% block body %}
     {{ form_start(form) }}
+    {{ form_widget(form._token) }}
     <div class="main-container">
         <div class="row">
-            <div class="container form-model mb-2 mt-5">
-                <div class="row">
-                    <div class="col-md-12 offset-md-5 mb-5 mt-0">
-                        <h4 class="text-white">Edit new Development documentation</h4>
-                        <small class="text-white">Use Tom-select with Symfony (No JQuery)</small>
+            <div class="container form-model mb-5 mt-5">
+                <div class="jumbotron jumbotron mb-3">
+                    <div class="container">
+                        <span class="lead"><strong>Edit Development documentation</strong></span>
+                        <p>
+                            <small>- Use Tom-select with for multi-select fields(No JQuery)</small><br>
+                            <small>- Use Symfony CollectionType and custom Searchable EntityType</small><br>
+                            <small>- Use VichUploader Bundle for uploading</small>
+                        </p>
                     </div>
                 </div>
-                <table id="new-model" class="table-expend table-sm">
-                    <tr>
-                        <td class="text-white">{{- form_label(form.title) -}}</td>
-                        <td>{{- form_widget(form.title) -}}</td>
-                        <td class="text-white">{{- form_label(form.section) -}}</td>
-                        <td>{{- form_widget(form.section) -}}</td>
-                    </tr>
-                    <tr>
-                        <td class="text-white">{{- form_label(form.tags) -}}</td>
-                        <td>{{- form_widget(form.tags) -}}</td>
-                        <td class="text-white">{{- form_label(form.slug) -}}</td>
-                        <td>{{- form_widget(form.slug) -}}</td>
-                    </tr>
-                    <tr>
-                        <td class="text-white">{{- form_label(form.content) -}}</td>
-                        <td>{{- form_widget(form.content) -}}</td>
-                        <td class="text-white">{{- form_label(form.file) -}}</td>
-                        <td>{{- form_widget(form.file,{ 'attr': {'class': 'form-control'}}) -}}</td>
-                    </tr>
-                    <tr>
-                        <td>{{- form_widget(form.submit, {'attr':{'class':'btn btn-warning w-100'}}) -}}</td>
-                    </tr>
-                </table>
+                <hr>
+                {{ include('root-admin/development/form/_form.html.twig', {form: form}) }}
             </div>
         </div>
     </div>
-    {{ form_end(form) }}
+    {{ form_end(form,{ render_rest: false }) }}
 {% endblock %}
 
 
