--- a/templates/root-admin/development/development_list.html.twig
+++ b/templates/root-admin/development/development_list.html.twig
@@ -3,26 +3,44 @@
 {% block body %}
 
     <div class="container">
-    <table class="table table-striped table-hover">
-        <thead>
-        <tr>
-            <th>ID</th>
-            <th>Titre</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for dev in developments %}
+        <div class="jumbotron jumbotron mb-3">
+            <div class="container">
+                <span class="lead"><strong>Development Documentation list</strong></span>
+            </div>
+        </div>
+        <table class="table table-striped table-hover table-sm">
+            <thead>
             <tr>
-                <td>{{ dev.id }}</td>
-                <td>{{ dev.title }}</td>
-                <td>
-                    <a href="{{ path('root_admin_dev_edit', {id: dev.id}) }}" class="btn btn-secondary">Editer</a>
-                </td>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Slug</th>
+                <th>Document</th>
+                <th>Section</th>
+                <th>Tags</th>
+                <th>Posts</th>
+                <th>Created</th>
+                <th>Actions</th>
             </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            {% for dev in developments %}
+                <tr>
+                    <td>{{ dev.id }}</td>
+                    <td>{{ dev.title }}</td>
+                    <td>{{ dev.slug }}</td>
+                    <td>{{ dev.filename }}</td>
+                    <td>{{ dev.section }}</td>
+                    <td>{{ dev.tags.count }}</td>
+                    <td>{{ dev.posts.count }}</td>
+                    <td>{{ dev.createdAt|date('d/m/y') }}</td>
+                    <td>
+                        <a href="{{ path('root_admin_dev_edit', {id: dev.id}) }}" class="btn btn-outline-primary btn-sm">Edit</a>
+                        <a href="#" class="btn btn-outline-danger btn-sm">Delete</a>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
     </div>
 {% endblock %}
 
