--- a/templates/root-admin/development/prototype/_post.html.twig
+++ b/templates/root-admin/development/prototype/_post.html.twig
@@ -1,7 +1,6 @@
-
 {{ form_row(form.title) }}
-    {{ form_row(form.content) }}
-    <div class="form-group">
-        <button class="btn btn-danger btn-sm btn-remove-post" type="button">Remove</button>
-    </div>
+{{ form_row(form.content) }}
+<div class="form-group p-2">
+    <button class="btn btn-danger btn-sm btn-remove-post mt-1" type="button">Remove</button>
+</div>
 
