Database update and ApiPlatform Auth

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -30,8 +30,8 @@ html{
     padding-right: 2em;
 }
 .front-app{
-    background: rgba(208, 81, 97, 0.9);
-    box-shadow: 0 0 5px 5px #524c4c;
+    background: #06988B;
+    box-shadow: 0 0 3px 3px rgba(91, 85, 85, 0.62);
 }
 
 [v-cloak] { display: none; }
