--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,8 +9,9 @@
     {% endblock %}
 </head>
 <body>
-    {%- block body_navbar -%}{%- endblock -%}
-    {% block body %}{% endblock %}
+{%- block body_navbar -%}{%- endblock -%}
+{%- block app_navbar -%}{%- endblock -%}
+{% block body %}{% endblock %}
 {% block javascripts %}
     <script>
         {% if symfonyRoutes is defined %}
