--- a/templates/navbars/symfony-app-navbar.html.twig
+++ b/templates/navbars/symfony-app-navbar.html.twig
@@ -11,7 +11,7 @@
                     <a class="nav-link" href="{{ path('development_list') }}">All tutorials</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Publish</a>
+                    <a class="nav-link" href="{{ path('development_publication') }}">Publish</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Search</a>
