--- a/templates/symfony-app/development-section.html.twig
+++ b/templates/symfony-app/development-section.html.twig
@@ -1,9 +1,7 @@
 <div class="container dev-by-section">
-    <div class="d-flex text-center">
-        <div class="container mt-4">
-            <span><strong>Symfony Single Page Application</strong></span><br>
-            <span><em>Use Fetch API to call Symfony controller, Response from ApiPlatform</em></span><br>
-            <a href="{{ path('development_list') }}" class="btn btn-outline-danger btn-sm mt-2 mb-4">Close</a>
+    <div class="d-flex float-end">
+        <div class="container">
+            <a href="{{ path('development_list') }}" class="btn btn-outline-danger btn-sm">X</a>
         </div>
     </div>
     <div class="dev-view">
