--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -39,11 +39,13 @@ a{
 }
 .dev-view{
     display: flex;
-    justify-content: center;
-    margin-top: 3em;
+    justify-content: space-around;
+    margin-top: 4em;
 }
 .dev-by-section{
-    background: rgba(166, 181, 217, 0.22);
+    margin-left: 4em;
+    margin-right: 4em;
+    background: rgba(216, 220, 229, 0.22);
     padding-bottom: 3em;
 }
 .front-app{
@@ -59,6 +61,9 @@ a{
     background-color: #fff;
     outline: none;
     border-bottom: 2px solid #5fbae9;
+}
+#display-view{
+    background: white;
 }
 #formContent {
     -webkit-border-radius: 10px 10px 10px 10px;
