--- a/templates/navbars/navbar.html.twig
+++ b/templates/navbars/navbar.html.twig
@@ -18,13 +18,13 @@
                         <a class="nav-link active" aria-current="page" href="{{ path('root_admin_home') }}">Back-Office</a>
                     </li>
                 </ul>
-                <div class="d-flex">
-                    {% if app.user %}
-                        <a class="text-white" aria-current="page" href="{{ path('logout') }}">Logout</a>
-                    {% else %}
-                        <a class="text-white" aria-current="page" href="{{ path('app_login') }}">Login</a>
-                    {% endif %}
-                </div>
+{#                <div class="d-flex">#}
+{#                    {% if app.user %}#}
+{#                        <a class="text-white" aria-current="page" href="{{ path('logout') }}">Logout</a>#}
+{#                    {% else %}#}
+{#                        <a class="text-white" aria-current="page" href="{{ path('app_login') }}">Login</a>#}
+{#                    {% endif %}#}
+{#                </div>#}
             </div>
         </div>
     </nav>
